[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/vnkit/Screens/Screens.gd" type="Script" id=2]
[ext_resource path="res://addons/vnkit/Screens/TitleScreen/TitleScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/vnkit/Screens/MainMenuReturnConfirm.gd" type="Script" id=4]
[ext_resource path="res://addons/vnkit/Screens/AboutScreen/AboutScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/vnkit/Screens/MainMenuReturnConfirmPanel.gd" type="Script" id=6]
[ext_resource path="res://addons/vnkit/Screens/SavesScreen/SavesScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/vnkit/Screens/HistoryScreen/HistoryScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/vnkit/Screens/PreferencesScreen/PreferencesScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/vnkit/Screens/MenuBar/MenuBar.tscn" type="PackedScene" id=16]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Screens" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="SubMenus" type="TabContainer" parent="."]
anchor_left = 0.22
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
tabs_visible = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TitleScreen" parent="SubMenus" instance=ExtResource( 3 )]
mouse_filter = 2

[node name="AboutScreen" parent="SubMenus" instance=ExtResource( 5 )]
visible = false
mouse_filter = 2

[node name="HistoryScreen" parent="SubMenus" instance=ExtResource( 9 )]
visible = false
mouse_filter = 2

[node name="PreferencesScreen" parent="SubMenus" instance=ExtResource( 12 )]
visible = false
mouse_filter = 2

[node name="SavesSlotScreen" parent="SubMenus" instance=ExtResource( 7 )]
visible = false
mouse_filter = 2
dummy_slot = null

[node name="MenuBar" parent="." instance=ExtResource( 16 )]
anchor_right = 0.22
mouse_filter = 2

[node name="MainMenuReturnConfirmPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainMenuReturnConfirm" type="AcceptDialog" parent="MainMenuReturnConfirmPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
popup_exclusive = true
window_title = "Alarm!"
dialog_text = "Are you sure you want to return to the main menu?
This will lose unsaved progress."
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="nav_button_press" from="MenuBar" to="." method="_on_nav_button_press"]
[connection signal="confirmed" from="MainMenuReturnConfirmPanel/MainMenuReturnConfirm" to="MainMenuReturnConfirmPanel/MainMenuReturnConfirm" method="_on_confirmed"]
[connection signal="popup_hide" from="MainMenuReturnConfirmPanel/MainMenuReturnConfirm" to="MainMenuReturnConfirmPanel" method="_on_popup_hide"]
[connection signal="show_main_menu" from="MainMenuReturnConfirmPanel/MainMenuReturnConfirm" to="." method="_on_nav_button_press"]
